# routes/api/v1/song.php
@@ -7,4 +7,5 @@ Route::middleware('auth:sanctum')->group(function () {
     Route::resource('/', SongController::class)->parameters(['' => 'song']);
     Route::get('/top-by-artist/{artistId}', [SongController::class, 'getTopSongsByArtist']);
     Route::get('/by-album-id/{albumId}', [SongController::class, 'getSongsByAlbumId']);
+    Route::get('/songs/top-today', [SongController::class, 'getTopSongsToday']);
 });
